# dep-graph-viewer

./: README.md  dep-graph-viewer.desktop  pyproject.toml
.github/workflows/: build-deb.yml  build-rpm.yml
.tx/: config
debian/: changelog  control  copyright  files  watch
debian/upstream/: metadata
po/: dep-graph-viewer.pot  sv.mo  sv.po
src/dep_graph_viewer/: main.py
