[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dep-graph-viewer"
version = "0.1.1"
description = "GTK4 dependency graph viewer for .deb packages"
requires-python = ">=3.10"
license = "GPL-3.0-or-later"
authors = [{name = "Daniel Nylander", email = "daniel@danielnylander.se"}]
dependencies = ["PyGObject>=3.42"]

[project.scripts]
dep-graph-viewer = "dep_graph_viewer.main:main"

[tool.setuptools.packages.find]
where = ["src"]
